# anfora-rag

./: .gitignore  README.md  pyproject.toml
anfora/: __main__.py  main.py
anfora/cli/: ingest.py
configs/: sources.yaml
data/codebases/: README.md
src/: __init__.py
src/ingest/: pipeline.py  runner.py
src/loaders/: __init__.py  base_loader.py  python_loader.py
src/parser/: README.md  build_parsers.py  ts_loader.py
src/types/: document.py
