[tool.black]
line-length = 88
target-version = ["py311"]  # 根据你实际使用的 Python 版本可改成 py310、py312
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "build", "dist", "__pycache__"]
extend-select = ["I", "F", "E", "W", "UP", "B", "N"]
# I: isort, F: pyflakes, E/W: pycodestyle, UP: pyupgrade, B: flake8-bugbear, N: pep8-naming

[tool.mypy]
python_version = 3.11
strict = true
ignore_missing_imports = true
exclude = '(\.venv|build|dist)'

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"